src/objects/ServiceContract.object
<CustomObject>
    <fields>
        <fullName>AccountName__c</fullName>
        <description>Account Name in subscription system</description>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountNumber__c</fullName>
        <description>Account Number in subscription system</description>
        <label>Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActivationDate__c</fullName>
        <label>Activation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CIM360Id__c</fullName>
        <label>CIM360Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ContractAcceptanceDate__c</fullName>
        <label>Contract Acceptance Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ContractEffectiveDate__c</fullName>
        <label>Contract Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DEPUniqueKey__c</fullName>
        <externalId>true</externalId>
        <label>DEP Unique Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ERPCompanyCode__c</fullName>
        <description>Company Code of the Customer number tied to the subscription</description>
        <label>ERP Company Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERPCustomerNumber__c</fullName>
        <description>matching Customer Number in ERP</description>
        <label>ERP Customer Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InitialTermPeriod__c</fullName>
        <label>Initial Term Period</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InitialTerm__c</fullName>
        <label>Initial Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsLatestVersion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Latest Version</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastBookingDate__c</fullName>
        <label>Last Booking Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MaterialId__c</fullName>
        <description>Equipment product</description>
        <label>Material Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MonthlyPrice__c</fullName>
        <label>Monthly Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Service Contracts</relationshipLabel>
        <relationshipName>Service_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RenewalPeriodType__c</fullName>
        <label>Renewal Period Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RenewalTerm__c</fullName>
        <label>Renewal Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SerialNumber__c</fullName>
        <description>Serial Number of Equipment</description>
        <inlineHelpText>Serial Number of Equipment</inlineHelpText>
        <label>Serial Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SiroforceId__c</fullName>
        <label>Siroforce Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceSystemName__c</fullName>
        <label>Source System Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubscriptionId__c</fullName>
        <label>Subscription Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubscriptionStatus__c</fullName>
        <label>Subscription Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubscriptionVersion__c</fullName>
        <label>Subscription Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TermEndDate__c</fullName>
        <label>Term End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TermStartDate__c</fullName>
        <label>Term Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TermType__c</fullName>
        <label>Term Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All_ServiceContracts</fullName>
        <columns>CONTRACT.NAME</columns>
        <columns>CONTRACT.APPROVALSTATUS</columns>
        <columns>CONTRACT.STARTDATE</columns>
        <columns>CONTRACT.ENDDATE</columns>
        <columns>CONTRACT.STATUS</columns>
        <filterScope>Everything</filterScope>
        <label>All Service Contracts</label>
    </listViews>
    <recordTypes>
        <fullName>ServiceContract</fullName>
        <active>true</active>
        <description>Standard record type used by integration of contracts/subscriptions as well</description>
        <label>Service Contract</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>